--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ nav{display:flex;align-items:center;gap:12px}
     <span class="reguler">Reguler</span> 
     Terbangun Tahun Anggaran 2020–2024
   </h2>
-  <div class="update-info">Data per September 2025</div>
+  <div class="update-info">Data: Periode II Bulan September 2025</div>
 </div>
 
     <div id="cards-reg-top" class="cards-row" aria-live="polite"></div>
@@ -260,7 +260,7 @@ nav{display:flex;align-items:center;gap:12px}
     <span class="ibm">IBM</span> 
     Terbangun Tahun Anggaran 2020–2024
   </h2>
-  <div class="update-info">Data per September 2025</div>
+  <div class="update-info">Data: Periode II Bulan September 2025</div>
 </div>
 
 
