--- a/index.html
+++ b/index.html
@@ -359,58 +359,40 @@ function mapItem(i){
 
   return { prefix: 'Infrastruktur', name, jumlah, invest, util, status };
 }
-  
-/* renderRowsFlex: buat displayName berdasarkan tipe, lalu render */
+
 function renderRowsFlex(topId, bottomId, data, type){
   const t = document.getElementById(topId), b = document.getElementById(bottomId);
   if(!t || !b) return;
   t.innerHTML = ''; b.innerHTML = '';
   const list = Array.isArray(data) ? data : [];
 
-  // helper: normalisasi nama display
   function makeDisplayName(rawName, type){
     const name = String(rawName || '').trim();
-    if(type === 'ibm'){
-      // IBM: tampilkan nama program apa adanya
-      return name || '-';
-    }
-    // reguler
+    if(type === 'ibm') return name || '-';
     const up = name.toUpperCase();
-    if(up === 'PKS' || up === 'BPB'){
-      return 'Sektor ' + name;
-    }
-    // default reguler: Bidang <Nama>
+    if(up === 'PKS' || up === 'BPB') return 'Sektor ' + name;
     return 'Bidang ' + name;
   }
 
-  // render top 3
+  function prefixFor(name){
+    const nm = String(name || '').trim();
+    if(type === 'ibm') return 'Infrastruktur IBM';
+    if(type === 'reguler' && (nm.toUpperCase() === 'PKS' || nm.toUpperCase() === 'BPB')) return 'Infrastruktur';
+    return 'Infrastruktur Sektor';
+  }
+
   list.slice(0,3).forEach(it=>{
     const f = mapItem(it);
     const displayName = makeDisplayName(f.name, type);
-    const pref = (type === 'ibm') ? 'Infrastruktur IBM' : ( (f.name.toUpperCase()==='PKS' || f.name.toUpperCase()==='BPB') ? 'Infrastruktur' : 'Infrastruktur Sektor' );
+    const pref = prefixFor(f.name);
     t.insertAdjacentHTML('beforeend', buildCardFlex(pref, displayName, f.jumlah, f.invest, f.util, f.status));
   });
 
-  // render bottom 2
   list.slice(3,5).forEach(it=>{
     const f = mapItem(it);
     const displayName = makeDisplayName(f.name, type);
-    const pref = (type === 'ibm') ? 'Infrastruktur IBM' : ( (f.name.toUpperCase()==='PKS' || f.name.toUpperCase()==='BPB') ? 'Infrastruktur' : 'Infrastruktur Sektor' );
+    const pref = prefixFor(f.name);
     b.insertAdjacentHTML('beforeend', buildCardFlex(pref, displayName, f.jumlah, f.invest, f.util, f.status));
-  });
-}
-  // render top 3
-  list.slice(0,3).forEach(it=>{
-    const f = mapItem(it);
-    const pref = prefixFor(f.name);
-    t.insertAdjacentHTML('beforeend', buildCardFlex(pref, f.name, f.jumlah, f.invest, f.util, f.status));
-  });
-
-  // render bottom 2
-  list.slice(3,5).forEach(it=>{
-    const f = mapItem(it);
-    const pref = prefixFor(f.name);
-    b.insertAdjacentHTML('beforeend', buildCardFlex(pref, f.name, f.jumlah, f.invest, f.util, f.status));
   });
 }
 
