--- a/peta.html
+++ b/peta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
   <meta charset="utf-8" />
@@ -28,14 +28,40 @@
     .legend{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:center;margin-top:12px;padding:10px 12px;background:rgba(0,0,0,0.45);border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,0.45);z-index:9999;position:relative}
     .legend-item{display:flex;align-items:center;gap:8px;padding:6px 8px;background:rgba(255,255,255,0.02);border-radius:8px;font-size:14px;color:#e6eef7}
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
-    .gm-style .gm-style-iw{padding:0!important;margin:0!important;max-width:320px!important;box-shadow:none!important}
-    .custom-iw{font-size:13px;color:#021129;background:#fff;padding:8px;border-radius:6px;max-width:320px;text-align:left;line-height:1.4}
+    .custom-iw{font-size:13px;color:#021129;background:#fff;padding:12px;border-radius:8px;max-width:320px;text-align:left;line-height:1.4;box-shadow:0 8px 24px rgba(2,6,23,0.35)}
     .custom-iw>div{margin:0;padding:0}
     .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:center;align-items:flex-start;flex-wrap:wrap;text-align:center}
+    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;text-align:left}
+    .footer-brand .logo{font-weight:700}
+    .footer-col h4{margin:0 0 8px 0;color:#fff}
+    .footer-note{margin-top:8px;color:#9ca3af;font-size:13px}
+    .footer-links{list-style:none;padding:0;margin:0}
+    .footer-links li{margin:6px 0}
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
     @media(max-width:900px){#map{height:65vh}.controls{flex-direction:column;align-items:flex-start}.footer-inner{gap:20px;justify-content:center}}
+
+    /* Map InfoWindow close button sizing and style */
+    .gm-style .gm-style-iw + div { right: 8px; top: 8px; } /* position wrapper */
+    .gm-style .gm-ui-hover-effect {
+      width:28px !important;
+      height:28px !important;
+      padding:0 !important;
+      border-radius:6px !important;
+      box-shadow:0 6px 14px rgba(2,6,23,0.35) !important;
+      background:#fff !important;
+      display:flex !important;
+      align-items:center !important;
+      justify-content:center !important;
+    }
+    .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg {
+      width:14px !important;
+      height:14px !important;
+      opacity:0.9;
+    }
+    /* Tweak InfoWindow text size for readability */
+    .gm-style .gm-style-iw { padding:0 !important; margin:0 !important; max-width:320px !important; }
+    .gm-style .gm-style-iw * { box-sizing:border-box; }
   </style>
 </head>
 <body>
@@ -79,7 +105,8 @@
       <div class="legend-item"><img src="images/icon-sanitasi-reguler.png" alt=""><span>Sanitasi - Reguler</span></div>
       <div class="legend-item"><img src="images/icon-sanitasi-masyarakat.png" alt=""><span>Sanitasi - Berbasis Masyarakat</span></div>
       <div class="legend-item"><img src="images/icon-bina.png" alt=""><span>Bina Penataan Bangunan</span></div>
-      <div class="legend-item"><img src="images/icon-kawasan.png" alt=""><span>Pengembangan Kawasan Strategis</span></div>
+      <div class="legend-item"><img src="images/icon-kawasan-reguler.png" alt=""><span>Pengembangan Kawasan Strategis - Reguler</span></div>
+      <div class="legend-item"><img src="images/icon-kawasan-masyarakat.png" alt=""><span>Pengembangan Kawasan Strategis - Berbasis Masyarakat</span></div>
     </div>
   </div>
 
@@ -100,8 +127,8 @@
       <div class="footer-col">
         <h4>Follow us</h4>
         <nav aria-label="Sosial media">
-          <ul class="footer-links">
-            <li>
+          <ul class="footer-links" style="display:flex;gap:10px;align-items:center">
+            <li style="display:inline-flex;align-items:center;gap:8px">
               <a href="https://www.instagram.com/pu_ciptakarya_maluku" target="_blank" rel="noopener noreferrer" aria-label="Instagram BPBPK Maluku" style="display:inline-flex;align-items:center;gap:10px;color:inherit;text-decoration:none">
                 <img src="images/instagram.png" alt="" style="width:18px;height:18px;display:block;flex-shrink:0" />
                 <span>Instagram</span>
@@ -122,11 +149,14 @@
     const RAW_GEOJSON = "https://raw.githubusercontent.com/bpbpkmaluku/Peta-Infrastruktur/main/data/DATA_SPASIAL.geojson";
     const ADMIN_PROV_URL = "data/maluku_prov.geojson";
     const ADMIN_KAB_URL  = "data/maluku_kabkota.geojson";
+
     const iconMap = {
       "Air Minum|Reguler": "images/icon-air-reguler.png",
       "Air Minum|Berbasis Masyarakat": "images/icon-air-masyarakat.png",
       "Sanitasi|Reguler": "images/icon-sanitasi-reguler.png",
       "Sanitasi|Berbasis Masyarakat": "images/icon-sanitasi-masyarakat.png",
+      "Pengembangan Kawasan Strategis|Reguler": "images/icon-kawasan-reguler.png",
+      "Pengembangan Kawasan Strategis|Berbasis Masyarakat": "images/icon-kawasan-masyarakat.png",
       "Bina Penataan Bangunan": "images/icon-bina.png",
       "Pengembangan Kawasan Strategis": "images/icon-kawasan.png",
       "default": "images/icon-default.png"
@@ -152,9 +182,19 @@
       return s.split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1).toLowerCase()).join(' ');
     }
 
+    // format angka ke rupiah sederhana
+    function formatCurrency(val){
+      if(val === undefined || val === null) return '';
+      const s = String(val).replace(/\s+/g,'').replace(/Rp|rp|,/g,'').replace(/\./g,'');
+      const num = Number(s);
+      if(!isFinite(num)) return String(val).trim();
+      return 'Rp ' + num.toLocaleString('id-ID');
+    }
+
+    // normalize properties: ambil banyak variasi nama kolom dan normalisasi nilai placeholder '-'
     function normalizeProperties(props){
       const out = {}; if(!props) return out;
-      Object.keys(props).forEach(k=>{ out[k] = props[k]; });
+      Object.keys(props).forEach(k => { out[k] = props[k]; });
 
       function getVal(names){
         for(const n of names){
@@ -170,12 +210,23 @@
       }
 
       out.Sektor = getVal(['Sektor','sektor','sector']);
-      out.Nama_Infrastruktur = getVal(['Nama Infrastruktur','nama_infrastruktur','nama','name']);
-      out.Jenis_Kegiatan = getVal(['Jenis Kegiatan','jenis_kegiatan','jenis','sub_kelas','subkelas']);
+      out.Nama_Infrastruktur = getVal(['Nama Infrastruktur','Nama_Infrastruktur','nama_infrastruktur','nama','name']);
+      out.Jenis_Kegiatan = getVal(['Jenis Kegiatan','Jenis_Kegiatan','jenis','sub_kelas','subkelas']);
       out.Lokasi = getVal(['Lokasi','lokasi','location','alamat','address','alamat_lengkap']);
       out.Wilayah = getVal(['Wilayah','wilayah','WADMKK','NAMOBJ','kabupaten','kota','kec']);
-      out.Tahun_Pembangunan = getVal(['Tahun Pembangunan','tahun_bangun','tahun']);
-      out.Status_Keberfungsian = getVal(['Status Keberfungsian','status_keberfungsian','status','kondisi']);
+      out.Tahun_Pembangunan = getVal(['Tahun Pembangunan','Tahun_Pembangunan','tahun_bangun','tahun']);
+      out.Status_Keberfungsian = getVal(['Status Keberfungsian','Status_Keberfungsian','status','kondisi']);
+
+      // tambahan: Realisasi Anggaran dan Tahun Optimalisasi dengan variasi nama kolom
+      out.Realisasi_Anggaran = getVal(['Realisasi Anggaran','Realisasi_Anggaran','realisasi_anggaran','anggaran','realisasi']);
+      out.Tahun_Optimalisasi = getVal([
+        'Tahun Optimalisasi','Tahun_Optimalisasi','tahun_optimalisasi','tahun_opt',
+        'Tahun Optimaslisasi','Tahun_Optimaslisasi'
+      ]);
+
+      // normalisasi placeholder '-' atau nilai kosong menjadi string kosong
+      if(String(out.Realisasi_Anggaran).trim() === '-') out.Realisasi_Anggaran = '';
+      if(String(out.Tahun_Optimalisasi).trim() === '-') out.Tahun_Optimalisasi = '';
 
       out.Wilayah = normalizeRegion(out.Wilayah || '');
 
@@ -211,6 +262,14 @@
       const tahun = String(find(['Tahun_Pembangunan','Tahun Bangun','tahun_bangun','tahun']) || '').trim();
       const status = String(find(['Status_Keberfungsian','Status Keberfungsian','status','kondisi']) || '').trim();
 
+      // ambil kedua field baru
+      const realAngRaw = String(find(['Realisasi_Anggaran','Realisasi Anggaran','realisasi_anggaran','anggaran','realisasi']) || '').trim();
+      const thOptimalRaw = String(find(['Tahun_Optimalisasi','Tahun Optimalisasi','tahun_optimalisasi','tahun_opt']) || '').trim();
+
+      // format rupiah jika tersedia
+      const realAng = realAngRaw ? formatCurrency(realAngRaw) : '';
+      const thOptimal = (thOptimalRaw && thOptimalRaw !== '-') ? thOptimalRaw : '';
+
       let html = '<div class="custom-iw">';
       if(nama) html += '<div><strong>'+escapeHtml(nama)+'</strong></div>';
       if(sektor) html += '<div>Sektor: '+escapeHtml(sektor)+'</div>';
@@ -219,6 +278,10 @@
       if(wilayah) html += '<div>Wilayah: '+escapeHtml(wilayah)+'</div>';
       if(tahun) html += '<div>Tahun Bangun: '+escapeHtml(tahun)+'</div>';
       if(status) html += '<div>Status: '+escapeHtml(status)+'</div>';
+
+      if(realAng) html += '<div>Realisasi Anggaran: '+escapeHtml(realAng)+'</div>';
+      if(thOptimal) html += '<div>Tahun Optimalisasi: '+escapeHtml(thOptimal)+'</div>';
+
       html += '</div>';
       return html;
     }
@@ -241,9 +304,10 @@
         const sectorName = props.Sektor ? String(props.Sektor).trim() : '';
         const jenis = props.Jenis_Kegiatan ? String(props.Jenis_Kegiatan).trim() : '';
         let iconUrl = iconMap['default'];
-        if(sectorName === 'Air Minum' || sectorName === 'Sanitasi'){
+
+        if (['Air Minum', 'Sanitasi', 'Pengembangan Kawasan Strategis'].includes(sectorName)) {
           const key = sectorName + '|' + (jenis || 'Reguler');
-          iconUrl = iconMap[key] || iconMap[sectorName + '|Reguler'] || iconMap['default'];
+          iconUrl = iconMap[key] || iconMap[sectorName + '|Reguler'] || iconMap[sectorName] || iconMap['default'];
         } else {
           iconUrl = iconMap[sectorName] || iconMap['default'];
         }
@@ -286,7 +350,7 @@
         if(p.Sektor) uniqueSectors.add(String(p.Sektor).trim());
         if(p.Tahun_Pembangunan && !isNaN(Number(p.Tahun_Pembangunan))) uniqueYears.add(String(p.Tahun_Pembangunan).trim());
         if(p.Wilayah) uniqueRegions.add(String(p.Wilayah).trim());
-        if(p.Sektor && (String(p.Sektor).trim() === 'Air Minum' || String(p.Sektor).trim() === 'Sanitasi') && p.Jenis_Kegiatan) uniqueJenis.add(String(p.Jenis_Kegiatan).trim());
+        if(p.Sektor && (String(p.Sektor).trim() === 'Air Minum' || String(p.Sektor).trim() === 'Sanitasi' || String(p.Sektor).trim() === 'Pengembangan Kawasan Strategis') && p.Jenis_Kegiatan) uniqueJenis.add(String(p.Jenis_Kegiatan).trim());
         if(p.Status_Keberfungsian) uniqueStatus.add(String(p.Status_Keberfungsian).trim());
       });
 
