--- a/peta.html
+++ b/peta.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Peta Infrastruktur - MalukuInfraZone</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -25,43 +24,60 @@
     select::-ms-expand{display:none}
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
     .status{margin-top:8px;color:var(--muted);font-size:13px}
-    .legend{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:center;margin-top:12px;padding:10px 12px;background:rgba(0,0,0,0.45);border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,0.45);z-index:9999;position:relative}
-    .legend-item{display:flex;align-items:center;gap:8px;padding:6px 8px;background:rgba(255,255,255,0.02);border-radius:8px;font-size:14px;color:#e6eef7}
+
+    /* Legend as grid: 4 columns on wide screens, auto-wrap */
+    .legend{
+      display:grid;
+      grid-template-columns: repeat(4, minmax(0,1fr));
+      gap:12px;
+      align-items:center;
+      justify-content:center;
+      margin-top:12px;
+      padding:12px;
+      background:rgba(0,0,0,0.45);
+      border-radius:10px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.45);
+      z-index:9999;
+      position:relative;
+      max-width:1200px;
+      margin-left:auto;
+      margin-right:auto;
+    }
+    .legend-item{display:flex;align-items:center;gap:10px;padding:10px 14px;background:rgba(255,255,255,0.03);border-radius:10px;font-size:14px;color:#e6eef7;min-width:220px}
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
+
+    /* Responsive legend: on small screens, 2 columns */
+    @media(max-width:900px){
+      .legend{grid-template-columns: repeat(2, minmax(0,1fr));}
+      #map{height:65vh}
+      .controls{flex-direction:column;align-items:flex-start}
+      .footer-inner{gap:20px;justify-content:center}
+    }
+
     .custom-iw{font-size:13px;color:#021129;background:#fff;padding:12px;border-radius:8px;max-width:320px;text-align:left;line-height:1.4;box-shadow:0 8px 24px rgba(2,6,23,0.35)}
     .custom-iw>div{margin:0;padding:0}
-    .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;text-align:left}
+
+    /* Footer layout */
+    .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
+    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap}
     .footer-brand .logo{font-weight:700}
     .footer-col h4{margin:0 0 8px 0;color:#fff}
     .footer-note{margin-top:8px;color:#9ca3af;font-size:13px}
     .footer-links{list-style:none;padding:0;margin:0}
     .footer-links li{margin:6px 0}
+    .footer-bottom{margin-top:16px;border-top:1px solid rgba(255,255,255,0.03);padding-top:12px;text-align:center;color:#9ca3af;font-size:13px}
+
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
-    @media(max-width:900px){#map{height:65vh}.controls{flex-direction:column;align-items:flex-start}.footer-inner{gap:20px;justify-content:center}}
 
-    /* Map InfoWindow close button sizing and style */
-    .gm-style .gm-style-iw + div { right: 8px; top: 8px; } /* position wrapper */
-    .gm-style .gm-ui-hover-effect {
-      width:28px !important;
-      height:28px !important;
-      padding:0 !important;
-      border-radius:6px !important;
-      box-shadow:0 6px 14px rgba(2,6,23,0.35) !important;
-      background:#fff !important;
-      display:flex !important;
-      align-items:center !important;
-      justify-content:center !important;
-    }
-    .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg {
-      width:14px !important;
-      height:14px !important;
-      opacity:0.9;
-    }
-    /* Tweak InfoWindow text size for readability */
+    /* Tame InfoWindow close button: hide internal image/svg then show single styled X */
     .gm-style .gm-style-iw { padding:0 !important; margin:0 !important; max-width:320px !important; }
-    .gm-style .gm-style-iw * { box-sizing:border-box; }
+    .gm-style .gm-ui-hover-effect { background:#fff !important; width:28px !important; height:28px !important; border-radius:6px !important; box-shadow:0 6px 14px rgba(2,6,23,0.35) !important; display:flex !important; align-items:center !important; justify-content:center !important; }
+    .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg { display:none !important; }
+    .gm-style .gm-ui-hover-effect::after{ content: "✕"; font-size:14px; color:#333; line-height:1; }
+
+    /* small visual polish for InfoWindow content */
+    .gm-style .gm-style-iw > div { padding:0 !important; }
   </style>
 </head>
 <body>
@@ -79,19 +95,14 @@
     <div style="margin-top:12px;display:flex;gap:8px;align-items:center;flex-wrap:wrap;justify-content:center">
       <label style="font-size:13px;color:var(--muted)">Sektor</label>
       <div class="select-wrap"><select id="sectorFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Wilayah</label>
       <div class="select-wrap"><select id="regionFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Tahun</label>
       <div class="select-wrap"><select id="yearFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Jenis Kegiatan</label>
       <div class="select-wrap"><select id="jenisFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Status Keberfungsian</label>
       <div class="select-wrap"><select id="statusFilter" class="select"></select></div>
-
       <button id="applyBtn" class="btn" style="background:var(--accent);color:#021129">Terapkan</button>
       <button id="resetBtn" class="btn btn-back">Reset</button>
     </div>
@@ -114,8 +125,8 @@
     <div class="footer-inner">
       <div class="footer-brand">
         <div class="logo">MalukuInfraZone</div>
-        <div class="tag">BPBPK Maluku</div>
-        <div class="footer-note">© 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Maluku. Semua hak dilindungi.</div>
+        <div class="tag" style="color:var(--muted)">BPBPK Maluku</div>
+        <div class="footer-note">Balai Penataan Bangunan, Prasarana dan Kawasan Maluku</div>
       </div>
 
       <div class="footer-col">
@@ -138,12 +149,13 @@
         </nav>
       </div>
     </div>
+
+    <div class="footer-bottom">© 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Maluku. Semua hak dilindungi.</div>
   </footer>
 
   <div class="goto-top" id="gotoTop" title="Kembali ke atas"><span>↑</span></div>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-
   <script>
     // Config
     const RAW_GEOJSON = "https://raw.githubusercontent.com/bpbpkmaluku/Peta-Infrastruktur/main/data/DATA_SPASIAL.geojson";
@@ -162,11 +174,9 @@
       "default": "images/icon-default.png"
     };
 
-    // State
     let map, infoWindow, allMarkers = [], geoData = null;
     const uniqueSectors = new Set(), uniqueYears = new Set(), uniqueRegions = new Set();
 
-    // Utilities
     function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[c]); }
     function setStatus(t){ document.getElementById('status').textContent = t || ''; }
 
@@ -182,7 +192,6 @@
       return s.split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1).toLowerCase()).join(' ');
     }
 
-    // format angka ke rupiah sederhana
     function formatCurrency(val){
       if(val === undefined || val === null) return '';
       const s = String(val).replace(/\s+/g,'').replace(/Rp|rp|,/g,'').replace(/\./g,'');
@@ -191,7 +200,6 @@
       return 'Rp ' + num.toLocaleString('id-ID');
     }
 
-    // normalize properties: ambil banyak variasi nama kolom dan normalisasi nilai placeholder '-'
     function normalizeProperties(props){
       const out = {}; if(!props) return out;
       Object.keys(props).forEach(k => { out[k] = props[k]; });
@@ -217,14 +225,12 @@
       out.Tahun_Pembangunan = getVal(['Tahun Pembangunan','Tahun_Pembangunan','tahun_bangun','tahun']);
       out.Status_Keberfungsian = getVal(['Status Keberfungsian','Status_Keberfungsian','status','kondisi']);
 
-      // tambahan: Realisasi Anggaran dan Tahun Optimalisasi dengan variasi nama kolom
       out.Realisasi_Anggaran = getVal(['Realisasi Anggaran','Realisasi_Anggaran','realisasi_anggaran','anggaran','realisasi']);
       out.Tahun_Optimalisasi = getVal([
         'Tahun Optimalisasi','Tahun_Optimalisasi','tahun_optimalisasi','tahun_opt',
         'Tahun Optimaslisasi','Tahun_Optimaslisasi'
       ]);
 
-      // normalisasi placeholder '-' atau nilai kosong menjadi string kosong
       if(String(out.Realisasi_Anggaran).trim() === '-') out.Realisasi_Anggaran = '';
       if(String(out.Tahun_Optimalisasi).trim() === '-') out.Tahun_Optimalisasi = '';
 
@@ -262,11 +268,9 @@
       const tahun = String(find(['Tahun_Pembangunan','Tahun Bangun','tahun_bangun','tahun']) || '').trim();
       const status = String(find(['Status_Keberfungsian','Status Keberfungsian','status','kondisi']) || '').trim();
 
-      // ambil kedua field baru
       const realAngRaw = String(find(['Realisasi_Anggaran','Realisasi Anggaran','realisasi_anggaran','anggaran','realisasi']) || '').trim();
       const thOptimalRaw = String(find(['Tahun_Optimalisasi','Tahun Optimalisasi','tahun_optimalisasi','tahun_opt']) || '').trim();
 
-      // format rupiah jika tersedia
       const realAng = realAngRaw ? formatCurrency(realAngRaw) : '';
       const thOptimal = (thOptimalRaw && thOptimalRaw !== '-') ? thOptimalRaw : '';
 
@@ -278,10 +282,8 @@
       if(wilayah) html += '<div>Wilayah: '+escapeHtml(wilayah)+'</div>';
       if(tahun) html += '<div>Tahun Bangun: '+escapeHtml(tahun)+'</div>';
       if(status) html += '<div>Status: '+escapeHtml(status)+'</div>';
-
       if(realAng) html += '<div>Realisasi Anggaran: '+escapeHtml(realAng)+'</div>';
       if(thOptimal) html += '<div>Tahun Optimalisasi: '+escapeHtml(thOptimal)+'</div>';
-
       html += '</div>';
       return html;
     }
@@ -374,7 +376,7 @@
       console.log('STATUS_OPTIONS:', statusOptions.map(s=>'['+s+']'));
     }
 
-    function applyFilter(){
+    function applyFilter(){ /* tetap sama seperti sebelumnya */ 
       const sector = document.getElementById('sectorFilter').value.trim();
       const year = document.getElementById('yearFilter').value.trim();
       const region = document.getElementById('regionFilter').value.trim();
@@ -498,13 +500,11 @@
       attachAdminInteractions();
     }
 
-    // UI helpers
     const goto = document.getElementById('gotoTop');
     goto.addEventListener('click', ()=>window.scrollTo({top:0,behavior:'smooth'}));
     window.addEventListener('scroll', ()=>{ goto.style.display = window.scrollY>200 ? 'flex' : 'none'; });
     goto.style.display = 'none';
 
-    // Load Google Maps then init
     function loadGoogleMapsThenInit(apiKey){
       if(window.google && google.maps && typeof initMap === 'function'){ try{ initMap(); }catch(e){ console.error(e); } return; }
       const s = document.createElement('script');
@@ -514,7 +514,6 @@
       document.head.appendChild(s);
     }
 
-    // Replace API key if needed
     loadGoogleMapsThenInit('AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0');
     window.initMap = initMap;
   </script>
