--- a/peta.html
+++ b/peta.html
@@ -24,6 +24,8 @@
     select::-ms-expand{display:none}
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
     .status{margin-top:8px;color:var(--muted);font-size:13px}
+    /* pastikan internal svg/img tidak tampil, kita gunakan teks X */
+ 
 
     /* Legend as grid: 4 columns on wide screens, auto-wrap */
     .legend{
@@ -75,6 +77,7 @@
     .gm-style .gm-ui-hover-effect { background:#fff !important; width:28px !important; height:28px !important; border-radius:6px !important; box-shadow:0 6px 14px rgba(2,6,23,0.35) !important; display:flex !important; align-items:center !important; justify-content:center !important; }
     .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg { display:none !important; }
     .gm-style .gm-ui-hover-effect::after{ content: "✕"; font-size:14px; color:#333; line-height:1; }
+   .gm-style .gm-ui-hover-effect img, .gm-style .gm-ui-hover-effect svg { display:none !important; }
 
     /* small visual polish for InfoWindow content */
     .gm-style .gm-style-iw > div { padding:0 !important; }
@@ -329,7 +332,9 @@
             setTimeout(()=> map.setZoom(targetZoom), 250);
             setTimeout(()=> { infoWindow.setContent(buildInfoHtml(props)); infoWindow.open(map, marker); }, 500);
           } else {
-            infoWindow.setContent(buildInfoHtml(props)); infoWindow.open(map, marker);
+           infoWindow.setContent(buildInfoHtml(props));
+          infoWindow.open(map, marker);
+          fixInfoWindowClose();
           }
         });
 
@@ -361,20 +366,26 @@
       document.getElementById('regionFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueRegions).sort().map(r=>'<option>'+escapeHtml(r)+'</option>').join('');
       document.getElementById('jenisFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueJenis).sort().map(j=>'<option>'+escapeHtml(j)+'</option>').join('');
 
-      const ordered = ['Berfungsi','Belum Berfungsi','Tidak Berfungsi','Tidak Diketahui'];
-      const statusSet = new Set(Array.from(uniqueStatus).map(s=>String(s||'').trim()).filter(Boolean));
-      ordered.forEach(s=>statusSet.add(s));
-      const statusOptions = Array.from(statusSet).sort((a,b)=>{
-        const ia = ordered.indexOf(a), ib = ordered.indexOf(b);
-        if(ia !== -1 && ib !== -1) return ia - ib;
-        if(ia !== -1) return -1;
-        if(ib !== -1) return 1;
-        return a.localeCompare(b);
-      });
+    // ubah urutan/penambahan status jadi hanya dari data
+const ordered = ['Berfungsi','Belum Berfungsi','Tidak Berfungsi','Tidak Diketahui'];
+const statusSet = new Set(Array.from(uniqueStatus).map(s=>String(s||'').trim()).filter(Boolean));
 
-      document.getElementById('statusFilter').innerHTML = '<option value="">Semua</option>' + statusOptions.map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
-      console.log('STATUS_OPTIONS:', statusOptions.map(s=>'['+s+']'));
-    }
+// tambahkan status standar hanya jika memang ada (case-insensitive)
+const lowerSet = new Set(Array.from(statusSet).map(s=>s.toLowerCase()));
+ordered.forEach(s=>{
+  if(lowerSet.has(s.toLowerCase())) statusSet.add(s);
+});
+
+// buat array terurut berdasarkan urutan prioritas jika tersedia
+const statusOptions = Array.from(statusSet).sort((a,b)=>{
+  const ia = ordered.indexOf(a), ib = ordered.indexOf(b);
+  if(ia !== -1 && ib !== -1) return ia - ib;
+  if(ia !== -1) return -1;
+  if(ib !== -1) return 1;
+  return a.localeCompare(b);
+});
+
+document.getElementById('statusFilter').innerHTML = '<option value="">Semua</option>' + statusOptions.map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
 
     function applyFilter(){ /* tetap sama seperti sebelumnya */ 
       const sector = document.getElementById('sectorFilter').value.trim();
@@ -472,9 +483,45 @@
         infoWindow.setContent(content);
         infoWindow.setPosition(e.latLng);
         infoWindow.open(map);
+        fixInfoWindowClose();
       });
     }
 
+// Perbaikan tombol close InfoWindow: simpan satu tombol dan perhalus tampilannya
+function fixInfoWindowClose(){
+  // tunggu sedikit agar DOM ter-render
+  setTimeout(()=>{
+    const btns = Array.from(document.querySelectorAll('.gm-ui-hover-effect'));
+    if(!btns.length) return;
+    btns.forEach((b, i)=>{
+      if(i === 0){
+        // tampilkan satu tombol rapi
+        b.style.display = 'flex';
+        b.style.width = '28px';
+        b.style.height = '28px';
+        b.style.padding = '0';
+        b.style.borderRadius = '6px';
+        b.style.boxShadow = '0 6px 14px rgba(2,6,23,0.35)';
+        b.style.background = '#fff';
+        b.style.alignItems = 'center';
+        b.style.justifyContent = 'center';
+        b.style.cursor = 'pointer';
+        b.style.border = 'none';
+        // isi tombol jadi satu karakter X
+        b.textContent = '✕';
+        b.style.fontSize = '14px';
+        b.style.color = '#333';
+        // remove internal img/svg if any
+        const innerImg = b.querySelector('img, svg');
+        if(innerImg) innerImg.style.display = 'none';
+      } else {
+        // sembunyikan duplikat
+        b.style.display = 'none';
+      }
+    });
+  }, 120);
+}
+    
     async function initMap(){
       map = new google.maps.Map(document.getElementById('map'), { center:{lat:-3.3,lng:129.1}, zoom:7, mapTypeControl:false, streetViewControl:false });
       infoWindow = new google.maps.InfoWindow({ maxWidth:320, pixelOffset: new google.maps.Size(0, -25) });
