--- a/peta.html
+++ b/peta.html
@@ -71,38 +71,45 @@
     .gm-style .gm-style-iw::after, .gm-style .gm-style-iw > div::after { display: none !important; }
     .gm-style .gm-ui-hover-effect { display:none !important; }
 
-    .custom-iw{
-      font-size:13px;
-      color:#021129;
-      background:#fff;
-      padding:12px 14px;
-      border-radius:8px;
-      max-width:320px;
-      text-align:left;
-      line-height:1.4;
-      box-shadow:0 8px 20px rgba(2,6,23,0.12);
-      border:1px solid rgba(0,0,0,0.06);
-      position:relative;
-    }
-    .custom-iw>div{margin:0;padding:0}
-    .custom-iw .iw-close{
-      position:absolute;
-      top:8px;
-      right:8px;
-      width:28px;
-      height:28px;
-      border-radius:6px;
-      border:none;
-      background:#fff;
-      box-shadow:0 6px 12px rgba(2,6,23,0.08);
-      cursor:pointer;
-      font-size:14px;
-      color:#333;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:0;
-    }
+   /* Popup: beri ruang untuk tombol, pastikan tombol tidak menutup teks */
+.custom-iw{
+  font-size:13px;
+  color:#021129;
+  background:#fff;
+  padding:18px 16px 12px 16px;    /* tambahkan top padding */
+  border-radius:8px;
+  max-width:320px;
+  text-align:left;
+  line-height:1.4;
+  box-shadow:0 8px 20px rgba(2,6,23,0.12);
+  border:1px solid rgba(0,0,0,0.06);
+  position:relative;
+  overflow:visible;               /* biarkan tombol keluar */
+  word-break:break-word;
+}
+
+/* Close button: taruh sedikit di luar sudut kanan atas */
+.custom-iw .iw-close{
+  position:absolute;
+  top: -10px;                     /* geser ke luar atas */
+  right: -10px;                   /* geser ke luar kanan */
+  width:30px;
+  height:30px;
+  border-radius:8px;
+  border:1px solid rgba(0,0,0,0.06);
+  background:#fff;
+  box-shadow:0 8px 18px rgba(2,6,23,0.12);
+  cursor:pointer;
+  font-size:14px;
+  color:#333;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:0;
+  z-index:9999;
+}
+
+/* Jika ingin tombol lebih kecil, ubah width/height/font-size ke 26/26/12 */
 
     /* Footer */
     .site-footer{background:#050505;color:#d1d5db;padding:24px 20px;margin-top:20px;border-radius:8px;text-align:left}
