--- a/peta.html
+++ b/peta.html
@@ -65,49 +65,69 @@
       .footer-inner{gap:20px;justify-content:center}
     }
 
-    /* InfoWindow: keep single clean box. Use default Google close control but small and neat. */
-    .gm-style .gm-style-iw { background: transparent !important; box-shadow: none !important; padding: 0 !important; overflow: visible !important; }
-    .gm-style .gm-style-iw > div { background: transparent !important; padding: 0 !important; overflow: visible !important; }
+.gm-style .gm-style-iw,
+.gm-style .gm-style-iw > div,
+.gm-style .gm-style-iw-d,
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-t {
+  background: transparent !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  overflow: visible !important;
+  width: auto !important;
+  max-width: none !important;
+  display: inline-block !important;
+}
 
-    /* style Google Maps close control to be small, white, and non-intrusive */
-    .gm-ui-hover-effect {
-      display:flex !important;
-      width:26px !important;
-      height:26px !important;
-      top:8px !important;
-      right:8px !important;
-      border-radius:6px !important;
-      background:#fff !important;
-      border:1px solid rgba(0,0,0,0.08) !important;
-      box-shadow:0 4px 10px rgba(2,6,23,0.08) !important;
-      align-items:center !important;
-      justify-content:center !important;
-      z-index:9999 !important;
-    }
-    .gm-ui-hover-effect img, .gm-ui-hover-effect svg, .gm-ui-hover-effect span {
-      width:12px !important;
-      height:12px !important;
-      display:block !important;
-      margin:0 !important;
-      transform:none !important;
-    }
+/* pastikan container google tidak menambah latar putih atau lebar */
+.gm-style .gm-style-iw::after,
+.gm-style .gm-style-iw > div::after,
+.gm-style .gm-style-iw-d::after,
+.gm-style .gm-style-iw-c::after,
+.gm-style .gm-style-iw-t::after { display: none !important; }
 
-    /* popup content box */
-    .custom-iw{
-      font-size:13px;
-      color:#021129;
-      background:#fff;
-      padding:12px 14px;
-      border-radius:8px;
-      max-width:320px;
-      text-align:left;
-      line-height:1.4;
-      box-shadow:0 8px 20px rgba(2,6,23,0.08);
-      border:1px solid rgba(0,0,0,0.06);
-      position:relative;
-      overflow:visible;
-      word-break:break-word;
-    }
+/* kecilkan & posisikan kontrol close default */
+.gm-ui-hover-effect{
+  display:flex !important;
+  width:26px !important;
+  height:26px !important;
+  top:8px !important;
+  right:8px !important;
+  border-radius:6px !important;
+  background:#fff !important;
+  border:1px solid rgba(0,0,0,0.08) !important;
+  box-shadow:0 4px 10px rgba(2,6,23,0.08) !important;
+  align-items:center !important;
+  justify-content:center !important;
+  z-index:9999 !important;
+}
+
+/* ikon tombol close kecil */
+.gm-ui-hover-effect img, .gm-ui-hover-effect svg, .gm-ui-hover-effect span {
+  width:12px !important;
+  height:12px !important;
+  display:block !important;
+  margin:0 !important;
+  transform:none !important;
+}
+
+/* konten actual: satu kotak bersih */
+.custom-iw{
+  font-size:13px;
+  color:#021129;
+  background:#fff;
+  padding:12px 14px;
+  border-radius:8px;
+  max-width:320px;
+  text-align:left;
+  line-height:1.4;
+  box-shadow:0 8px 20px rgba(2,6,23,0.08);
+  border:1px solid rgba(0,0,0,0.06);
+  position:relative;
+  overflow:visible;
+  word-break:break-word;
+}
     .custom-iw>div{margin:0;padding:0}
 
     /* ensure Google wrapper doesn't force scroll */
