--- a/peta.html
+++ b/peta.html
@@ -84,30 +84,37 @@
       justify-content:center !important;
       z-index:9999 !important;
     }
-    .gm-ui-hover-effect img, .gm-ui-hover-effect svg, .gm-ui-hover-effect span {
-      width:12px !important;
-      height:12px !important;
-      display:block !important;
-      margin:0 !important;
-      transform:none !important;
-    }
 
-    /* popup content box */
-    .custom-iw{
-      font-size:13px;
-      color:#021129;
-      background:#fff;
-      padding:12px 14px;
-      border-radius:8px;
-      max-width:320px;
-      text-align:left;
-      line-height:1.4;
-      box-shadow:0 8px 20px rgba(2,6,23,0.08);
-      border:1px solid rgba(0,0,0,0.06);
-      position:relative;
-      overflow:visible;
-      word-break:break-word;
-    }
+    /* Reposisi tombol close agar tetap di dalam popup tapi tidak menutupi teks */
+.gm-style-iw-t::after {
+  display: none !important;
+}
+
+.gm-ui-hover-effect {
+  position: absolute !important;
+  top: 6px !important;
+  right: 6px !important;
+  transform: none !important;
+  background: #fff !important;
+  border-radius: 4px !important;
+  border: 1px solid rgba(0,0,0,0.1) !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1) !important;
+  width: 20px !important;
+  height: 20px !important;
+  z-index: 100 !important;
+}
+
+.gm-ui-hover-effect img,
+.gm-ui-hover-effect svg {
+  width: 10px !important;
+  height: 10px !important;
+  margin: auto !important;
+}
+
+.custom-iw {
+  position: relative;
+  padding-top: 28px; /* beri ruang agar tombol tidak menutupi teks */
+}
     .custom-iw>div{margin:0;padding:0}
 
     /* ensure Google wrapper doesn't force scroll */
