--- a/peta.html
+++ b/peta.html
@@ -105,7 +105,7 @@
 /* Tombol close flat di dalam popup */
 .gm-style .gm-ui-hover-effect {
   position: absolute !important;
-  top: 6px !important;
+  top: 16px !important;
   right: 6px !important;
   width: 14px !important;
   height: 14px !important;
@@ -116,7 +116,7 @@
   justify-content: center !important;
   cursor: pointer !important;
   z-index: 99999 !important;
-  border: 1px solid rgba(0,0,0,0.1) !important;
+  border: none;
   box-shadow: none !important; /* flat tanpa shadow */
 }
 
